package com.github.brugapp.brug

import android.app.Activity
import android.app.Instrumentation
import android.content.Intent
import androidx.test.espresso.Espresso.closeSoftKeyboard
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.intent.Intents
import androidx.test.espresso.intent.Intents.intending
import androidx.test.espresso.intent.matcher.ComponentNameMatchers
import androidx.test.espresso.intent.matcher.IntentMatchers
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.github.brugapp.brug.ui.RegisterUserActivity
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@HiltAndroidTest
@RunWith(AndroidJUnit4::class)
class RegisterUserTest {
    @get:Rule
    var registerUserActivityRule = ActivityScenarioRule(RegisterUserActivity::class.java)


    @get:Rule
    val rule = HiltAndroidRule(this)


    @Test
    fun registerUserTypeAndSubmitTest(){
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.firstname)).perform(typeText("Tess"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.lastName)).perform(typeText("Terr"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.PasswordReg)).perform(typeText("short"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.PasswordReg)).perform(typeText("yoghurtman"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.emailAddressReg)).perform(typeText("bademail.com"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.emailAddressReg)).perform(clearText())
        onView(withId(R.id.emailAddressReg)).perform(typeText("unlost.app@gmail.com"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        onView(withId(R.id.emailAddressReg)).perform(clearText())
        onView(withId(R.id.emailAddressReg)).perform(typeText("freshemail@gmail.com"))
        closeSoftKeyboard()
        onView(withId(R.id.registerbutton)).perform(click())
        // check if contains register button
        onView(withId(R.id.registerbutton))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun registerUserActivityTest() {
        Intents.init()

        intending(
            IntentMatchers.hasComponent(
                ComponentNameMatchers.hasClassName(
                    RegisterUserActivity::class.java.name
                )
            )
        )
            .respondWith(
                Instrumentation.ActivityResult(
                    Activity.RESULT_OK,
                    Intent()
                )
            )

        // check if text appears correctly
        onView(withId(R.id.newAccount))
            .check(ViewAssertions.matches(ViewMatchers.withText("Create A New Account")))
        // check if contains register button
        onView(withId(R.id.registerbutton))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        // check if contains other textboxes
        onView(withId(R.id.firstname))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(withId(R.id.lastName))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(withId(R.id.emailAddressReg))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(withId(R.id.PasswordReg))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Intents.release()
    }
}